--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -65,6 +65,8 @@
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-ring: var(--sidebar-ring);
+
+    --animate-why-us-img: var(--why-us-img-animation);
 }
 
 /*
@@ -134,6 +136,8 @@
     --sidebar-ring: oklch(0.87 0 0);
 
     --inter-font: 'Inter', sans-serif;
+
+    --why-us-img-animation: why-us-img-bounce 2.5s infinite alternate;
 }
 
 .dark {
@@ -186,5 +190,17 @@
 
     .hero-section-header-text-size {
         @apply xl:text-69 text-[60px];
+    }
+
+    @keyframes why-us-img-bounce {
+        0%,
+        100% {
+            transform: translateY(-10px);
+            animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+        }
+        50% {
+            transform: none;
+            animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+        }
     }
 }
