--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -34,6 +34,7 @@
     --color-primary-foreground: var(--primary-foreground);
     --color-crayola-blue: var(--crayola-blue);
     --color-chillie-red: var(--chillie-red);
+    --color-primary-orange: var(--primary-orange);
 
     --color-secondary-pink: var(--secondary-pink);
 
@@ -112,6 +113,7 @@
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.145 0 0);
     --primary: oklch(0.205 0 0);
+    --primary-orange: #e63829;
     --primary-foreground: oklch(1 0 0);
     --secondary-pink: #ff1466;
     --secondary: oklch(0.97 0 0);
