--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,7 @@
 @import 'tailwindcss';
 
 @plugin 'tailwindcss-animate';
+@plugin 'tailwind-scrollbar';
 
 @source '../views';
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
